[gd_scene load_steps=15 format=3 uid="uid://bhdb8ylg22vmm"]

[ext_resource type="Shader" path="res://shaders/slime_boss.gdshader" id="1_hhmaj"]
[ext_resource type="Script" path="res://scripts/enemies/slime_boss.gd" id="1_wx8mf"]
[ext_resource type="Texture2D" uid="uid://0mvx75tl8gb8" path="res://images/sprites/enemies/slime boss/corpo_verde.png" id="1_xxjew"]
[ext_resource type="Texture2D" uid="uid://cel5ye83ckbpe" path="res://images/sprites/enemies/slime boss/olho_base.png" id="3_1auy7"]
[ext_resource type="Texture2D" uid="uid://cphiidm21c75o" path="res://images/sprites/enemies/slime boss/olho.png" id="4_pngnc"]
[ext_resource type="Texture2D" uid="uid://4b11k34mab03" path="res://images/sprites/enemies/slime boss/dano.png" id="4_sm87g"]
[ext_resource type="Texture2D" uid="uid://ciyf5pd7j31rs" path="res://images/sprites/enemies/slime boss/sobrancelha.png" id="5_87b18"]
[ext_resource type="PackedScene" uid="uid://wqwwtr8de2e4" path="res://entities/enemies/slime_easy.tscn" id="5_olrma"]
[ext_resource type="Texture2D" uid="uid://dbmg1mn32ir3x" path="res://images/sprites/enemies/slime boss/idle.png" id="6_3b4he"]
[ext_resource type="PackedScene" uid="uid://pew2k35ds8il" path="res://entities/enemies/slime_medium.tscn" id="6_taqr2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_38lnu"]
shader = ExtResource("1_hhmaj")
shader_parameter/amplitude = 1.0
shader_parameter/speed = 3.0
shader_parameter/tiling = 20.0
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/flash_intensity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0f6q"]
size = Vector2(815, 235)

[sub_resource type="CircleShape2D" id="CircleShape2D_a56oe"]
radius = 154.003

[sub_resource type="CircleShape2D" id="CircleShape2D_4scmb"]
radius = 142.004

[node name="SlimeBoss" type="CharacterBody2D" node_paths=PackedStringArray("eyes")]
position = Vector2(459, 610)
collision_layer = 4
motion_mode = 1
script = ExtResource("1_wx8mf")
minimum_scale = 1.0
body_texture = ExtResource("1_xxjew")
eyes = [NodePath("BodyContainer/Body/EyeSocket"), NodePath("BodyContainer/Body/EyeSocket2"), NodePath("BodyContainer/Body/EyeSocket3")]
idle_mouth = ExtResource("6_3b4he")
damage_mouth = ExtResource("4_sm87g")
spawn_slime_range = Vector2(8, 2)
weak_slime = ExtResource("5_olrma")
strong_slime = ExtResource("6_taqr2")
health = 100
death_color = Color(0.592157, 1, 0.560784, 1)

[node name="BodyContainer" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="BodyContainer"]
material = SubResource("ShaderMaterial_38lnu")
position = Vector2(0, -299)
texture = ExtResource("1_xxjew")

[node name="EyeSocket" type="Sprite2D" parent="BodyContainer/Body"]
position = Vector2(-77, -16)
texture = ExtResource("3_1auy7")

[node name="Eye" type="Sprite2D" parent="BodyContainer/Body/EyeSocket"]
position = Vector2(30, 1)
rotation = -1.5708
texture = ExtResource("4_pngnc")

[node name="EyeSocket2" type="Sprite2D" parent="BodyContainer/Body"]
position = Vector2(74, -19)
texture = ExtResource("3_1auy7")

[node name="Eye" type="Sprite2D" parent="BodyContainer/Body/EyeSocket2"]
position = Vector2(30, 1)
rotation = -1.5708
texture = ExtResource("4_pngnc")

[node name="EyeSocket3" type="Sprite2D" parent="BodyContainer/Body"]
position = Vector2(-4, -137)
texture = ExtResource("3_1auy7")

[node name="Eye" type="Sprite2D" parent="BodyContainer/Body/EyeSocket3"]
position = Vector2(30, 1)
rotation = -1.5708
texture = ExtResource("4_pngnc")

[node name="Eyebrow" type="Sprite2D" parent="BodyContainer/Body"]
position = Vector2(3, -231)
texture = ExtResource("5_87b18")

[node name="Mouth" type="Sprite2D" parent="BodyContainer/Body"]
position = Vector2(-11, 93)
texture = ExtResource("6_3b4he")

[node name="EyeCenter" type="Marker2D" parent="BodyContainer"]
position = Vector2(0, -344)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -107.5)
shape = SubResource("RectangleShape2D_k0f6q")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(4, -275)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-6, 168)
shape = SubResource("CircleShape2D_a56oe")
debug_color = Color(1, 1, 0, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-307, 192)
shape = SubResource("CircleShape2D_4scmb")
debug_color = Color(1, 1, 0, 0.419608)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(300, 208)
shape = SubResource("CircleShape2D_4scmb")
debug_color = Color(1, 1, 0, 0.419608)
